Módulo Actas - Compromisos: La modal de edición fue modificada y estilada. Se ajustaron gaps del título del acta. El botón de "Reunión Cerrada" fue correctamente centrado.

--- a/frontend/src/pages/Minute/minute.module.css
+++ b/frontend/src/pages/Minute/minute.module.css
@@ -34,7 +34,7 @@
     .commitment-title-container div{
         display: flex;
         align-items: center;    
-        gap: 10px;
+        gap: 18px;
     }
     .state-active{
         display: flex;
@@ -58,11 +58,6 @@
         background-color: #f3f4f6;
         color: #374151;
     }
-    .commitment-title-container span{
-        font-size: 20px;
-        font-weight: 500;
-        color: #6b7280;
-    }
     .close-meeting-section{
         display: flex;
         margin-top: 50px;
@@ -82,6 +77,9 @@
         background-color: #3f3f46;
     }
     .close-meeting-btn-disabled{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         height: 40px;
         width: 150px;
         border: 1px solid rgb(141, 137, 137);
@@ -104,6 +102,31 @@
         border: 1px solid #d1d5db;
         border-radius: 12px;
         box-sizing: border-box;
+    }
+    .commitment-title-section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 50px;
+        margin-top: 54px;
+        padding-top: 54px;
+        padding-bottom: 24px;
+        border-top: 1px solid #f3f4f6;
+    }
+    .commitment-title-section div{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        width: 90%;
+        height: 100%;
+    }
+    .commitment-title-section p{
+        font-size: 20px;
+        font-weight: 500;
+        color: #6b7280;
     }
     .add-commitment-section form{
         display: flex;
@@ -173,39 +196,9 @@
         gap: 10px;
         cursor: pointer;
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    .add-commitment-btn:hover{
+        background-color: #15803d;
+    }
     .filters-section{
         display: flex;
         justify-content: flex-start;
@@ -349,65 +342,120 @@
         position: fixed;
         top: 55%;
         left: 50.5%;
+        width: 550px;
+        height: 650px;
+        padding: 12px;
         transform: translate(-50%, -50%);
-        height: 450px;
-        width: 1500px;
         background-color: white;
-        border: 1px solid black;
+        border: 1px solid #e5e7eb;
         border-radius: 12px;
         z-index: 1000;
+        box-sizing: border-box;
     }
-    #modal-table{
-        border-collapse: collapse;
-        margin-top: 75px;
-        border: 1px solid black;
-    }
-    #modal-thead{
-        background-color: rgb(131, 170, 73);
-        color: white;
-        height: 50px;
-    }
-    .modal-thead-th, .modal-thead-th-large, #modal-thead-th-commitment-text{
-        border: 1px solid black;
-        text-align: center;
-        font-weight: 500;
-    }
-    .modal-thead-th{
-        width: 150px;
-    }
-    .modal-thead-th-large{
-        width: 300px;
-    }
-    #modal-thead-th-commitment-text{
-        width: 600px;
-    }
-    #modal-tbody{
-        height: 50px;
-    }
-    .modal-td{
-        border: 1px solid black;
-        text-align: center;
-    }
-    #modal-buttons{
+    .modal-header{
         display: flex;
-        justify-content: center;
-        margin-top: 30px;
-        gap: 50px;
+        justify-content: space-between;
+        align-items: center;
+        width: 95%;
+        height: 74px;
     }
-    #secondary-btn{
+    .modal-header div{
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+        gap: 14px;
+    }
+    .modal-header div h1{
+        margin: 0;
+        padding: 0;
+        height: 0px;
+        font-size: 20px;
+        font-weight: bold;
+        color: #111827;
+    }
+    .modal-header div p{
+        font-size: 14px;
+        font-weight: 500;
+        color: #6b7280;
+    }
+    .modal-header button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 32px;
+        height: 32px;
+        padding-right: 10px;
+        background-color: white;
+        border: none;
+        cursor: pointer;
+        transition: 0.1s ease-in-out;
+    }
+    .modal-header button:hover svg{
+        stroke: #111827;
+    }
+    .modal-form{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 90%;
+        height: 100%;
+        gap: 10px;
+    }
+    .modal-form fieldset{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        width: 100%;
+        gap: 10px;
+    }
+    .modal-form fieldset textarea{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        height: 100px;
+        width: 100%;
+        padding: 12px;
+        border: 1px solid #d1d5db;
+        border-radius: 6px;
+        gap: 10px;
+        box-sizing: border-box;
+    }
+    .modal-footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        margin-top: 20px;
+    }
+    .modal-btn-cancel{
         height: 40px;
         width: 100px;
         border-radius: 5px;
+        border: 1px solid #d1d5db;
         background-color: white;
-        border: 1px solid gray;
-        color: black;
+        color: #1f2937;
+        cursor: pointer;
+        transition: 0.1s ease-in-out;
+    }
+    .modal-btn-cancel:hover{
+        background-color: #f3f4f6;
+        color: #030712;
+    }
+    .modal-btn-save{
+        height: 40px;
+        width: 150px;
+        background-color: #16a34a;
+        border-radius: 5px;
+        border: none;
+        color: white;
         font-size: 16px;
         cursor: pointer;
+        transition: 0.1s ease-in-out;
     }
-    #secondary-btn:hover{
-        background-color: rgb(240, 240, 240);
+    .modal-btn-save:hover{
+        background-color: #15803d;
     }
-    
+
     /* Topic and Agreements Section */
 
     .topic-agreement-section{
